--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -42,7 +42,7 @@ under the License.
       </span>
     </a>
     <div class="tocify-wrapper">
-      <div style="padding: 20px 0 10px 10px;"><%= image_tag "logo.png" %></div>
+      <div style="padding: 20px 0 10px 10px;"><%= image_tag "logo.svg" %></div>
       <% if language_tabs %>
         <div class="lang-selector">
           <% language_tabs.each do |lang| %>
